# card-arena

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: card-advocate.md  card-fact-checker.md  card-judge.md  card-scout.md
.claude/commands/: arena.md  build-profile.md  judge-cards.md  scout-cards.md
.github/workflows/: codeql.yml
agents/: card-advocate.md  card-fact-checker.md  card-judge.md  profile-interviewer.md
arena/: __init__.py  agents.py  arena.py  cli.py  dossier.py  llm.py
cards/: amex_blue_cash_everyday.md  boa_customized_cash_rewards_secured.md  boa_student.md  capital_one_quicksilver_secured.md  capital_one_savor_student.md  chase_freedom_rise.md  chime_card.md  discover_it_student.md  petal_2_visa.md  requirements.md  roster.json  us_bank_cash_plus_secured.md
commands/: arena.md  build-profile.md  judge-cards.md  list-cards.md  scout-cards.md
tests/: test_arena.py
