[project]
name = "card-arena"
version = "0.1.0"
description = "Two AI agents debate; a judge picks the winning credit card."
requires-python = ">=3.9"
dependencies = ["anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
card-arena = "arena.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["arena"]

[tool.pytest.ini_options]
pythonpath = ["."]
